read org level ftest function

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -60,3 +60,7 @@
 /* .sapMInputBase {
   padding-left: 1%;
 } */
+
+.sapMFlexBox.sapMVBox.sapMFlexBoxJustifyStart.sapMFlexBoxAlignItemsStretch.sapMFlexBoxWrapNoWrap.sapMFlexBoxAlignContentStretch.sapMFlexBoxBGTransparent {
+  background-color: white;
+}
